# test_db_Rust_API_PHP

./: .gitignore  README.md  employees.sql
database/: employees.sql
employee_api/: .env  Cargo.toml
employee_api/src/: db.rs  main.rs
employee_api/src/handlers/: department_handlers.rs  employee_handlers.rs
employee_api/src/models/: department.rs  employee.rs  salary.rs
employee_api/src/routes/: department_routes.rs  employee_routes.rs
php/: .env  api_request.php  index.php
rust_employee_api/: .env  Cargo.toml  Commands.txt  Rust API CURL test command examples.txt  Rust API set JWT instructions and rate limit example.docx  secret key.txt
rust_employee_api/src/: db.rs  handler.rs  main.rs  model.rs  rate_limit.rs  route.rs  schema.rs
rust_employee_api/src/auth/: jwt.rs  mod.rs
rust_employee_api/src/departments/: handlers.rs  mod.rs  models.rs  routes.rs  schemas.rs
rust_employee_api/src/dept_emp/: handlers.rs  models.rs  routes.rs
rust_employee_api/src/dept_manager/: handlers.rs  models.rs  routes.rs
rust_employee_api/src/employees/: handlers.rs  models.rs  routes.rs  schemas.rs
rust_employee_api/src/salaries/: handlers.rs  models.rs  routes.rs
rust_employee_api/src/sodium/: mod.rs  sodium_crypto.rs
rust_employee_api/src/titles/: handlers.rs  models.rs  routes.rs
