[package]
name = "rust_employee_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.7.2"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.7.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.27.0", features = ["full"] }
tower-http = { version = "0.5.0", features = ["cors", "auth"] }
uuid = { version = "1.3.1", features = ["serde", "v4"] }
tower = { version = "0.4.10", features = ["limit"] }
