[package]
name = "rust_employee_api"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.1"
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"
sqlx = { version = "0.8.3", features = ["runtime-async-std-native-tls", "mysql", "chrono", "uuid"] }
tokio = { version = "1.44.1", features = ["full"] }
tower = { version = "0.5.2", features = ["limit"] }
tower-http = { version = "0.6.2", features = ["cors"] }
async-trait = "0.1"
jsonwebtoken = "9.3.1"
futures = "0.3"
lazy_static = "1.5.0"

